# ons-githubflask-dummy

./: package-lock.json  pyproject.toml  run.py
ons_dummy/: __init__.py  routes.py
ons_dummy/templates/: home.html
