[tool.poetry]
name = "ons-dummy"
version = "0.1.0"
description = ""
authors = ["delterr <Hasan.T.Ahmad@ons.gov.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
